--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		
 			<div class="row">
 				<div class="col-lg-4 d-flex justify-content-center align-items-center" data-aos="fade-right">
-					<img src="assets/img/yon.jpg" class="img-fluid rounded-circle w-75" alt="">
+					<img src="assets/img/yon.jpg" class="img-fluid w-75" alt="">
 				</div>
 				<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 					<h3>Web Programmer</h3>
@@ -334,6 +334,22 @@
 									<h5 class="card-title">Portfolio Website</h5>
 									<p class="card-text">This is a static website for my portfolio. Website designed by mystery code and modified by me using HTML, CSS, and Javascript.</p>
 									<p class="card-text"><small class="text-muted">2021</small></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-4">
+						<div class="project">
+							<div class="card mb-3">
+								<a href="assets/img/portfolio/vuejs.png" class="image-link">
+									<img src="assets/img/portfolio/vuejs.png" class="card-img-top" alt="">
+								</a>
+								<div class="card-body">
+									<h5 class="card-title">Brewing Website</h5>
+									<p class="card-text">This is a SPA website for my brewing coffee using PHP(backend) and Vue JS (frontend).</p>
+									<p class="card-text"><small class="text-muted">Ongoing</small></p>
 								</div>
 							</div>
 						</div>
