--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 		
 			<div class="row">
 				<div class="col-lg-4 d-flex justify-content-center align-items-center" data-aos="fade-right">
-					<img src="assets/img/yon.jpg" class="img-fluid w-75" alt="">
+					<div class="text-center w-75 image">
+						<img src="assets/img/yonn.png" class="img-fluid" width="100%" alt="">
+					</div>
 				</div>
 				<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 					<h3>Web Programmer</h3>
