--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta content="" name="description">
   	<meta content="" name="keywords">
 
-  	<link href="assets/img/SignatureLogo.png" rel="icon">
+  	<link href="assets/img/yonico.ico" rel="icon">
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -63,7 +63,7 @@
 			<div class="row">
 				<div class="col-lg-4 d-flex justify-content-center align-items-center" data-aos="fade-right">
 					<div class="text-center w-75 image">
-						<img src="assets/img/yonn.png" class="img-fluid" width="100%" alt="">
+						<img src="assets/img/yon.png" class="img-fluid" width="100%" alt="">
 					</div>
 				</div>
 				<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
@@ -238,9 +238,9 @@
 							</div>
 						</div>
 						<div class="progress">
-							<span class="skill">Vue Js <i class="val">65%</i></span>
+							<span class="skill">Vue Js <i class="val">70%</i></span>
 							<div class="progress-bar-warp">
-								<div class="progress-bar" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+								<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
 								
 							</div>
 						</div>
