[Update] add some style and transition

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 				<div class="owl-carousel owl-theme container p-1">
 					
 					<div class="project item">
-						<div class="card mb-3">
+						<div class="card mb-3 rounded">
 							<a class="image-link" href="assets/img/portfolio/tactix.png" aria-label="tactix">
 								<img src="assets/img/portfolio/tactix.png" class="card-img-top" alt="">
 							</a>
