[Fix] Fixing profile rounded image style

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="row">
                 <div class="col-lg-4 d-flex justify-content-center align-items-center" data-aos="fade-right">
-                    <div class="text-center w-75">
+                    <div class="text-center image-wrapper">
                         <img src="assets/img/yon.png" width="100%" alt="Yon Andreas">
                     </div>
                 </div>
